# my-first-blog

./: README.md  db.sqlite3  main.spec  pyproject.toml
blog/: models.py
blog/migrations/: 0001_initial.py  0002_post_youtube_link.py  0003_post_youtube_embeded.py  0004_remove_post_youtube_embeded.py  0005_post_youtube_embeded.py  0006_remove_post_youtube_embeded.py
blog/static/css/: blog.css
blog/templates/blog/: post_list.html
mysite/: settings.py
