[tool.poetry]
name = "django-girls"
version = "0.1.0"
description = ""
authors = ["Dmitry Lvovich Grachev <grdmitriyl@gmail.com>"]
readme = "README.md"
packages = [{include = "django_girls"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
